--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -49,9 +49,17 @@
 			<artifactId>jstl</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-		</dependency>
+
+	      <groupId>org.projectlombok</groupId>
+	
+	      <artifactId>lombok</artifactId>
+	
+	      <version>1.18.8</version>
+	
+	      <scope>provided</scope>
+	
+	  	</dependency>
+		
 	</dependencies>
 
 	<build>
